# affilgood

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  demo.ipynb  environment.yml  eval-affilgood.py  eval-affilgood.sh  project_structure.txt  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  setup_data.py
AffilGoodEL/: config.py  functions.py  s2aff_el.py
AffilGoodEL/Elastic_qLLM/: 1.1_final_predictions_elastic_no_reranked.py  1_elastic_link_ner_organizations.py  2.1_final_reranked_predictions.py  2_llm_reranking.py  README.md  config.py  index_ror_data.py  requirements.txt
AffilGoodNER/: config.py  functions.py  ner.py
AffilGoodSpan/: config.py  functions.py  span.py
affilgood/: __init__.py  affilgood.py  api.py  data_manager.py  output.py  pipeline.py  setup.py
affilgood/components/: __init__.py  geocode.py  heuristic_detector.py  language.py  ner.py  organization_type.py  span.py  translate.py
affilgood/entity_linking/: constants.py  (+16 more)
docs/: DATA_FILES.md  ENTITY_LINKING_ARCHITECTURE.md  api-documentation.md  contribute.md  contribution-guide.md  contribution_guide.md  customization.md  data-sources.md  entity-linking-extension.md  entity-linking.md  getting-started.md  language-processing.md  modules.md  performance.md  technical-overview.md  usage-examples.md  usage_examples.md
eval/: README.txt  enhanced_eval_affilgood.py  run_all_evaluations.sh
example/: example_raw_affiliation_strings.txt
models/: evaluating_model.py
scripts/: generate_wikidata_index.sh  sample_output.txt
tests/: test_smoke.py
utils/: config.py  functions.py
(+316 files in other folders)
